<resources>
    <string name="app_name" translatable="false">miMartillo.com</string>
    <string name="action_settings" translatable="false">\?\?\?</string>
    <string name="simbolo_moneda" translatable="false">€</string>
    <string name="opcionDrawer_perfil">Profile</string>
    <string name="opcionDrawer_misObrasAbiertas">My open works</string>
    <string name="opcionDrawer_misObrasCerradas">Closed works history</string>
    <string name="opcionDrawer_nuevaObra">Create new work</string>
    <string name="opcionDrawer_misFavoritos">My favorites</string>
    <string name="opcionDrawer_buscarProfesional">Professional search</string>
    <string name="opcionDrawer_acercaDe">About miMartillo.com</string>
    <string name="opcionDrawer_misObrasAdjudicadas">My assigned works</string>
    <string name="opcionDrawer_misObrasCompletadas">Finished works history</string>
    <string name="opcionDrawer_misObrasSeguidas">Works I am following</string>
    <string name="opcionDrawer_misValoraciones">My votes</string>
    <string name="opcionDrawer_buscarObra">Work search</string>
    <string name="opcionDrawer_accesoPremium">FREE! Premium Access</string>
    <string name="opcionMenu_cerrar_sesion">Log off</string>
    <string name="opcionMenu_actualizar">Refresh</string>
    <string name="opcionMenu_ver_detalles">View details</string>
    <string name="opcionMenu_cerrar_obra">Close work</string>
    <string name="opcionMenu_eliminar_obra">Remove work</string>
    <string name="opcionMenu_valorar_obra">Vote work</string>
    <string name="opcionMenu_agregar_favorito">Add favorite</string>
    <string name="opcionMenu_eliminar_favorito">Remove favorite</string>
    <string name="opcionMenu_repetir_busqueda">Repeat search</string>
    <string name="opcionMenu_resetear_formulario">Reset form</string>
    <string name="opcionMenu_seguir_obra">Follow work</string>
    <string name="opcionMenu_ignorar_obra">Unfollow work</string>
    <string name="opcionMenu_ordenar_resultados">Sort results…</string>
    <string name="opcionMenu_ordenar_obras">Sort works…</string>
    <string name="opcionMenu_ordenar_titulo_asc">By title (A)</string>
    <string name="opcionMenu_ordenar_distancia_asc">By distance (A)</string>
    <string name="opcionMenu_ordenar_tipo_asc">By work type (A)</string>
    <string name="opcionMenu_ordenar_realizacion_asc">By execution date (A)</string>
    <string name="opcionMenu_ordenar_realizacion_desc">By execution date (D)</string>
    <string name="opcionMenu_ordenar_antiguedad_desc">By creation date (D)</string>
    <string name="opcionMenu_ordenar_visitas_desc">By views (D)</string>
    <string name="opcionMenu_ordenar_nombre_asc">By name (A)</string>
    <string name="opcionMenu_ordenar_poblacion_asc">By city (A)</string>
    <string name="opcionMenu_ordenar_provincia_asc">By province (A)</string>
    <string name="opcionMenu_ordenar_votos_desc">By votes (D)</string>
    <string name="opcionMenu_ordenar_favoritos">Sort favorites…</string>
    <string name="opcionMenu_ordenar_favoritos_despues">Favorites last</string>
    <string name="opcionMenu_ordenar_valoraciones">Sort votes…</string>
    <string name="opcionMenu_ordenar_solicitante_asc">By owner (A)</string>
    <string name="opcionMenu_ordenar_calidad_desc">By quality (D)</string>
    <string name="opcionMenu_ordenar_precio_desc">By cost (D)</string>
    <string name="opcionMenu_ordenar_fecha_desc">By date (D)</string>
    <string name="opcionMenu_ordenar_favoritos_primero">Favorites first</string>
    <string name="titulo_servicio_desconocido">Unknown operation</string>
    <string name="titulo_servicio_LOGIN">Log in</string>
    <string name="titulo_servicio_CHECK_SESSION">User authentication</string>
    <string name="titulo_servicio_REGISTER">User registration</string>
    <string name="titulo_servicio_NEW_WORK">New work</string>
    <string name="titulo_servicio_INITIAL_PARAMETERS_NEW_WORK">Form load</string>
    <string name="titulo_servicio_MY_WORKS">Work list</string>
    <string name="titulo_servicio_WORK_INFO">Work details</string>
    <string name="titulo_servicio_PROFESSIONAL_SEARCH">Professional search</string>
    <string name="titulo_servicio_PROFESSIONAL_INFO">Professional info</string>
    <string name="titulo_servicio_MODIFY_FAVORITES">Add/Remove favorite</string>
    <string name="titulo_servicio_MY_FAVORITES">Favorite professionals</string>
    <string name="titulo_servicio_SPINNER_VALUES">Form load</string>
    <string name="titulo_servicio_USER_PROFILE">User profile</string>
    <string name="titulo_servicio_WORK_FOLLOWERS">Work followers</string>
    <string name="titulo_servicio_CLOSE_WORK">Close work</string>
    <string name="titulo_servicio_VOTE_WORK">Vote work</string>
    <string name="titulo_servicio_REMOVE_WORK">Remove work</string>
    <string name="titulo_servicio_MY_WORKS_PRO">Work list</string>
    <string name="titulo_servicio_WORK_SEARCH">Work search</string>
    <string name="titulo_servicio_MY_VOTES">Received votes</string>
    <string name="titulo_servicio_PREMIUM_ACCESS">Premium Access</string>
    <string name="titulo_servicio_FOLLOW_WORK">Follow work</string>
    <string name="titulo_servicio_UNFOLLOW_WORK">Unfollow work</string>
    <string name="titulo_servicio_PROFESSIONAL_PROFILE">User profile</string>
    <string name="titulo_servicio_PASSWORD_RESET">Password reset</string>
    <string name="txt_progresoSegundoPlano">Connecting…</string>
    <string name="msg_generico_ErrorInesperado">An unexpected error happened, please contact Support if the problem persists.</string>
    <string name="msg_generico_ErrorFalloTarea">There were problems processing the server response. This might be due to some maintenance operation, please try again within a few minutes.\n\nContact Support if the problem persists.</string>
    <string name="msg_generico_ErrorTimeoutTarea">There are problems connecting to the server, please check your Internet connection or try again within a few minutes.</string>
    <string name="msg_generico_ErrorRespuestaIncorrecta">There were problems processing the server response, contact Support if the problem persists.</string>
    <string name="msg_generico_ErrorSesionInvalida">The stored credentials are no longer valid. Please log in again.</string>
    <string name="msg_generico_ErrorSesionExpirada">The session stored in this device has expired. Please log in again.</string>
    <string name="msg_generico_ErrorUsuarioDeshabilitado1">The user</string>
    <string name="msg_generico_ErrorUsuarioDeshabilitado2">is disabled. If you already enabled your account after registration, please contact Support.</string>
    <string name="msg_RegistroUsuario_ERR_UsuarioRepetido">There is already a user created with that email address.</string>
    <string name="msg_RegistroUsuario_ERR_EnviarCorreo">Your user account has been created, but there were problems sending you an email with instructions to activate it.\n\nPlease contact Support to solve this problem.</string>
    <string name="msg_RegistrarUsuario_OK_UsuarioCreado">Your user account has been created.\n\nWe sent you an email with instructions to activate it.</string>
    <string name="msg_Login_ERR_PasswordIncorrecto">Incorrect user name or password.</string>
    <string name="titulo_Login_OK_FalloAvatar">Profile picture</string>
    <string name="msg_Login_OK_FalloAvatar">There were problems loading your profile picture.\nRemember you can set a new picture from the profile screen.</string>
    <string name="msg_BuscarObras_OK_SinCoincidencias">No works match your criteria.</string>
    <string name="msg_BuscarObras_OK_HayCoincidencias">works match your criteria.</string>
    <string name="msg_AgregarFavorito_OK_FavoritoAgregado">Professional added to your favorites.</string>
    <string name="msg_EliminarFavorito_OK_FavoritoEliminado">Professional removed from your favorites.</string>
    <string name="msg_BuscarProfesional_OK_SinCoincidencias">No professionals match your criteria.</string>
    <string name="msg_BuscarProfesional_OK_HayCoincidencias">professionals match your criteria.</string>
    <string name="msg_MisObras_OK_ObrasAbiertas">Currently you do not have any open work.  Use the \"Create new work\" option from the drawer to find new works.</string>
    <string name="msg_MisObras_OK_ObrasCerradas">You have not closed any work yet.</string>
    <string name="msg_MisObrasPro_OK_ObrasAdjudicadas">Currently you do not have any assigned, unfinished work . Use the \"Work search\" option from the drawer to find new works.</string>
    <string name="msg_MisObrasPro_OK_ObrasCompletadas">You have not finished any work yet. Use the \"Work search\" option from the drawer to find new works.</string>
    <string name="msg_MisObrasPro_OK_ObrasSeguidas">Currently you are not following any work. Use the \"Work search\" option from the drawer to find new works.</string>
    <string name="msg_MisFavoritos_OK_ListadoFavoritos">You have not added any professional to your favorites yet.</string>
    <string name="msg_MisValoraciones_OK_ProfesionalTitular">You have not received any vote yet.</string>
    <string name="msg_InfoObra_ERR_ObraInexistente">This work no longer exists, it might have been removed by its owner.\n\nTry refreshing the work list.</string>
    <string name="msg_CerrarObra_ERR_ObraInexistente">This work no longer exists, try refreshing the Open Works list.</string>
    <string name="msg_CerrarObra_ERR_ObraYaCerrada">This work was already closed, try refreshing the work list.</string>
    <string name="msg_CerrarObra_ERR_UsuarioNoAutorizado">This work can be closed by its owner only.</string>
    <string name="msg_CerrarObra_ERR_AdjudicatarioInexistente">This professional no longer exists, try refreshing the Open Works list.</string>
    <string name="msg_CerrarObra_OK_ObraCerrada">Succesfully closed work.</string>
    <string name="msg_ValorarObra_ERR_OperacionDenegada">Either you do not have permissions to vote this work or the work no longer exists, try refreshing the work list.</string>
    <string name="msg_ValorarObra_OK_ValoracionRealizada">Your vote has been registered. Thanks!</string>
    <string name="msg_SeguirObra_ERR_NoEsPremium">Only Premium professionals are able to follow a work.\n\nContact Support to learn how to get your Premium access and enjoy its exclusive benefits.</string>
    <string name="msg_SeguirObra_ERR_ObraInexistente">This work no longer exists, it might have been removed by its owner.\n\nTry refreshing the work list.</string>
    <string name="msg_SeguirObra_ERR_ObraYaCerrada">This work is closed, probably its owner already assigned it.\n\nTry refreshing the work list.</string>
    <string name="msg_SeguirObra_ERR_LimiteSeguidores">We are sorry,but this work has reached its limit of followers.\n\nIt might lose some followers in the future, give it a try later.</string>
    <string name="msg_SeguirObra_OK_ObraSeguida">Now you are following this work.</string>
    <string name="VentanaErrores_txt_btnAceptarError">Ok</string>
    <string name="VentanaErrores_txt_btnCopiarPortapapeles">Copy to clipboard</string>
    <string name="VentanaErrores_txt_debugTitulo">Debug info:</string>
    <string name="VentanaErrores_txt_informativo">The app reported an unexpected error. Please try again.</string>
    <string name="VentanaErrores_txt_titulo">Application error</string>
    <string name="VentanaInicio_txt_btnAccesoParticulares">Private User</string>
    <string name="VentanaInicio_txt_btnAccesoProfesionales">Professional User</string>
    <string name="VentanaInicio_txt_problemasConexion">Connection issues?</string>
    <string name="VentanaLogin_txt_btnLogin">Log in</string>
    <string name="VentanaLogin_txt_btnOlvidado">Forgot your password?</string>
    <string name="VentanaLogin_txt_btnRegistrar">I do not have an account</string>
    <string name="VentanaLogin_txt_email">Your email</string>
    <string name="VentanaLogin_txt_password">Password</string>
</resources>