<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.cdelgado.mimartillocom.VentanaBusquedaProfesional">

    <item android:id="@+id/menu_repetir_busqueda"
        android:title="@string/opcionMenu_repetir_busqueda"
        android:icon="@drawable/ic_refrescar"
        app:showAsAction="never"/>

    <item android:id="@+id/menu_ordenar_profesionales"
        android:title="@string/opcionMenu_ordenar_resultados"
        android:icon="@drawable/ic_ordenar"
        app:showAsAction="never">

        <menu>
            <item
                android:id="@+id/menu_ordenar_nombre_asc"
                android:title="@string/opcionMenu_ordenar_nombre_asc"
                android:icon="@drawable/ic_ordenar" />

            <item
                android:id="@+id/menu_ordenar_poblacion_asc"
                android:title="@string/opcionMenu_ordenar_poblacion_asc"
                android:icon="@drawable/ic_ordenar" />

            <item
                android:id="@+id/menu_ordenar_provincia_asc"
                android:title="@string/opcionMenu_ordenar_provincia_asc"
                android:icon="@drawable/ic_ordenar" />

            <item
                android:id="@+id/menu_ordenar_distanciaPro_asc"
                android:title="@string/opcionMenu_ordenar_distancia_asc"
                android:icon="@drawable/ic_ordenar" />

            <item
                android:id="@+id/menu_ordenar_votos_desc"
                android:title="@string/opcionMenu_ordenar_votos_desc"
                android:icon="@drawable/ic_ordenar" />

            <item
                android:id="@+id/menu_ordenar_calidad_desc"
                android:title="@string/opcionMenu_ordenar_calidad_desc"
                android:icon="@drawable/ic_ordenar" />

            <item
                android:id="@+id/menu_ordenar_precio_desc"
                android:title="@string/opcionMenu_ordenar_precio_desc"
                android:icon="@drawable/ic_ordenar" />

            <item
                android:id="@+id/menu_ordenar_favoritos_primero"
                android:title="@string/opcionMenu_ordenar_favoritos_primero"
                android:icon="@drawable/ic_ordenar" />

            <item
                android:id="@+id/menu_ordenar_favoritos_despues"
                android:title="@string/opcionMenu_ordenar_favoritos_despues"
                android:icon="@drawable/ic_ordenar" />
        </menu>
    </item>

    <item android:id="@+id/menu_resetear_formulario"
        android:title="@string/opcionMenu_resetear_formulario"
        android:icon="@drawable/ic_borrar"
        app:showAsAction="never"/>

    <item android:id="@+id/menu_cerrar_sesion"
        android:title="@string/opcionMenu_cerrar_sesion"
        android:icon="@drawable/ic_salir"
        app:showAsAction="never"/>

</menu>