<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.cdelgado.mimartillocom.VentanaBusquedaProfesional">

    <item android:id="@+id/menu_repetir_busqueda"
        android:title="@string/opcionMenu_repetir_busqueda"
        android:icon="@drawable/ic_refrescar"
        app:showAsAction="never"/>

    <item android:id="@+id/menu_resetear_formulario"
        android:title="@string/opcionMenu_resetear_formulario"
        android:icon="@drawable/ic_borrar"
        app:showAsAction="never"/>

    <item android:id="@+id/menu_cerrar_sesion"
        android:title="@string/opcionMenu_cerrar_sesion"
        android:icon="@drawable/ic_salir"
        app:showAsAction="never"/>

</menu>
