<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:background="@color/fondo_contenido"
                tools:context=".VentanaInicio"
                android:weightSum="1">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="85dp"
        android:id="@+id/imgLogoApp"
        android:src="@drawable/app_logo"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imgAyuda"
        android:src="@drawable/ic_ayuda"
        android:layout_alignBottom="@+id/imgLogoApp"
        android:layout_alignRight="@+id/linearLayout"
        android:layout_alignEnd="@+id/linearLayout"
        android:padding="5dp" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:id="@+id/linearLayout">

        <Button
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:text="@string/VentanaInicio_txt_btnAccesoParticulares"
            android:id="@+id/btnAccesoParticulares"
            android:singleLine="false"
            android:background="@drawable/fondo_boton_amarillo_redondeado"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="15dp"
            android:textSize="24sp" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:text="@string/VentanaInicio_txt_btnAccesoProfesionales"
            android:id="@+id/btnAccesoProfesionales"
            android:background="@drawable/fondo_boton_amarillo_redondeado"
            android:textSize="24sp"
            android:layout_marginTop="15dp" />

        <Button
            android:id="@+id/btnProblemasConexion"
            android:layout_width="fill_parent"
            android:layout_height="18dp"
            android:gravity="right"
            android:layout_marginTop="20dp"
            android:background="@null"
            android:text="@string/VentanaInicio_txt_problemasConexion"
            android:textAllCaps="false"
            android:textColor="@color/blanco"
            android:layout_marginRight="10dp"
            android:textSize="14sp" />
    </LinearLayout>

</RelativeLayout>
